--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
 		<div class="container">
-			<a class="navbar-brand" href="#">Marathon</a>
+			<a class="navbar-brand" href="#">Marathon 2019</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarResponsive" aria-controls="navbarResponsive"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -32,14 +32,12 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
+					<li class="nav-item active"><a class="nav-link" href="#"> About
 							<span class="sr-only">(current)</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a>
-					</li>
+					</a></li>					
+					<li class="nav-item"><a class="nav-link" href="participants.html">Registration</a> 	</li>
+					<li class="nav-item"><a class="nav-link" href="/participants.html">Participants</a> </li>
+					<li class="nav-item"><a class="nav-link" href="https://sdl-marathon.herokuapp.com/participants.html">Contact</a> </li>
 				</ul>
 			</div>
 		</div>
@@ -58,8 +56,8 @@
 					</p>
 				</div>
 			</div>
-			
-			</div>
+
+		</div>
 	</section>
 
 	<!-- Bootstrap core JavaScript -->
