--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 					<li class="nav-item active"><a class="nav-link" href="#"> About
 							<span class="sr-only">(current)</span>
 					</a></li>					
-					<li class="nav-item"><a class="nav-link" href="participants.html">Registration</a> 	</li>
+					<li class="nav-item"><a class="nav-link" href="register.html">Registration</a> 	</li>
 					<li class="nav-item"><a class="nav-link" href="/participants.html">Participants</a> </li>
 					<li class="nav-item"><a class="nav-link" href="https://sdl-marathon.herokuapp.com/participants.html">Contact</a> </li>
 				</ul>
